--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.12",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.5",
     "validator": "^13.11.0",
